--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,29 +40,6 @@
         <div class="logo">
             <a href="/"><img src="images/12.png" title="星云东西" /></a>
         </div>
-        <!--<div class="nav-icon">
-            <a href="#" class="right_bt" id="activator"><span> </span> </a>
-        </div>-->
-        <div class="box" id="box">
-            <div class="box_content">
-                <div class="box_content_center">
-                    <div class="form_content">
-                        <div class="menu_box_list">
-                            <ul>
-                                <li><a href="#"><span>home</span></a></li>
-                                <li><a href="#"><span>About</span></a></li>
-                                <li><a href="#"><span>Works</span></a></li>
-                                <li><a href="#"><span>Clients</span></a></li>
-                                <li><a href="#"><span>Blog</span></a></li>
-                                <li><a href="contact.html"><span>Contact</span></a></li>
-                                <div class="clear"> </div>
-                            </ul>
-                        </div>
-                        <a class="boxclose" id="boxclose"> <span> </span></a>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="top-searchbar">
             <form>
                 <input type="text" /><input type="submit" value="" />
@@ -90,17 +67,8 @@
                     <div class="post-info">
                         <div class="post-basic-info">
                             <h3><a href="#" th:text="${goods.title}"></a></h3>
-                            <span><a href="#"><label> </label>Movies</a></span>
+                            <span><a href="#"><label> </label><span th:text="${goods.label}"></span></a></span>
                             <p th:text="${goods.message}"></p>
-                        </div>
-                        <div class="post-info-rate-share">
-                            <div class="rateit">
-                                <span> </span>
-                            </div>
-                            <div class="post-share">
-                                <span> </span>
-                            </div>
-                            <div class="clear"> </div>
                         </div>
                     </div>
                 </li>
