--- a/src/main/resources/templates/single-page.html
+++ b/src/main/resources/templates/single-page.html
@@ -48,7 +48,7 @@
         <div class="userinfo">
             <div class="user">
                 <ul>
-                    <li><a href="#"><img src="images/user-pic.png" title="user-name"/><span>Ipsum</span></a></li>
+                    <li><a href="#"><img src="images/user-pic.png" title="user-name"/><span>皮皮</span></a></li>
                 </ul>
             </div>
         </div>
