--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css' />
         <link rel="stylesheet" href="css/main.css" />
         <script src="js/jquery.min.js"></script>
+        <script src="js/index.js"></script>
         <script type="text/javascript">
             var $ = jQuery.noConflict();
             $(function() {
@@ -40,10 +41,12 @@
         <div class="logo">
             <a href="/"><img src="images/12.png" title="星云东西" /></a>
         </div>
+        <div class="nav-icon">
+            <a href="/newGoods" class="right_bt" id="activator"><span> </span> </a>
+        </div>
         <div class="top-searchbar">
-            <form>
-                <input type="text" /><input type="submit" value="" />
-            </form>
+            <input th:attr="value=${search}" type="text" id="searchText"/>
+            <input type="submit" value="" onclick="searchBar()"/>
         </div>
         <div class="userinfo">
             <div class="user">
@@ -56,7 +59,6 @@
     </div>
 </div>
 
-<div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >ÆóÒµÍøÕ¾Ä£°å</a></div>
 
 <div class="content">
     <div class="wrap">
