--- a/src/main/resources/templates/new-goods.html
+++ b/src/main/resources/templates/new-goods.html
@@ -70,12 +70,7 @@
 <div class="header">
     <div class="wrap">
         <div class="logo">
-            <a href="index.html"><img src="images/12.png" title="pinbal"/></a>
-        </div>
-        <div class="top-searchbar">
-            <form>
-                <input type="text"/><input type="submit" value=""/>
-            </form>
+            <a href="/"><img src="images/12.png" title="pinbal"/></a>
         </div>
         <div class="userinfo">
             <div class="user">
@@ -90,14 +85,6 @@
 <div class="content">
     <div class="wrap">
         <div class="contact-info">
-            <div class="map">
-                <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                        src="https://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265&amp;output=embed"></iframe>
-                <br/>
-                <small><a
-                        href="https://maps.google.co.in/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265"
-                        style="color:#666;text-align:left;font-size:12px"></a></small>
-            </div>
             <div class="contact-grids">
                 <form method="post" action="contact-post.html">
                     <div class="contact-form">
