--- a/src/main/resources/templates/new-goods.html
+++ b/src/main/resources/templates/new-goods.html
@@ -18,7 +18,9 @@
     <script src="js/vendor/jquery.ui.widget.js"></script>
     <script src="js/jquery.iframe-transport.js"></script>
     <script src="js/jquery.fileupload.js"></script>
-    <script src="js/addGoods.js"></script>
+    <script src="js/nebPay.js"></script>
+    <script src="js/nebulas.js"></script>
+    <script src="js/test.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
         var $ = jQuery.noConflict();
@@ -75,7 +77,7 @@
         <div class="userinfo">
             <div class="user">
                 <ul>
-                    <li><a href="#"><img src="images/user-pic.png" title="user-name"/><span>皮皮</span></a></li>
+                    <li><a href="#"><img src="images/user-pic.png" title="user-name"/><span>皮皮蛇</span></a></li>
                 </ul>
             </div>
         </div>
@@ -86,7 +88,7 @@
     <div class="wrap">
         <div class="contact-info">
             <div class="contact-grids">
-                <form method="post" action="contact-post.html">
+                <form>
                     <div class="contact-form">
                         <div class="contact-to">
                             <input id="title" type="text" class="text" value="商品标题..." onfocus="this.value = '';"
