--- a/src/main/resources/templates/single-page.html
+++ b/src/main/resources/templates/single-page.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>single-page</title>
+    <title th:text="${goods.title}"></title>
     <link href="css/style.css" rel='stylesheet' type='text/css'/>
     <link rel="shortcut icon" type="image/x-icon" href="images/fav-icon.png"/>
     <script type="application/x-javascript"> addEventListener("load", function () {
