--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,13 +48,13 @@
             <input th:attr="value=${search}" type="text" id="searchText"/>
             <input type="submit" value="" onclick="searchBar()"/>
         </div>-->
-        <div class="userinfo">
+        <!--<div class="userinfo">
             <div class="user">
                 <ul>
                     <li><a href="#"><img src="images/user-pic.png" title="user-name" /><span>皮皮蛇</span></a></li>
                 </ul>
             </div>
-        </div>
+        </div>-->
         <div class="clear"> </div>
     </div>
 </div>
