--- a/src/main/resources/templates/new-goods.html
+++ b/src/main/resources/templates/new-goods.html
@@ -74,13 +74,13 @@
         <div class="logo">
             <a href="/"><img src="images/12.png" title="pinbal"/></a>
         </div>
-        <div class="userinfo">
+        <!--<div class="userinfo">
             <div class="user">
                 <ul>
                     <li><a href="#"><img src="images/user-pic.png" title="user-name"/><span>皮皮蛇</span></a></li>
                 </ul>
             </div>
-        </div>
+        </div>-->
         <div class="clear"></div>
     </div>
 </div>
